[gd_scene load_steps=4 format=3 uid="uid://dfuvd1dj7o7op"]

[ext_resource type="Script" path="res://Scenes/Explore/Menu/DialogSystem/dialog_screen.gd" id="1_1fqaa"]
[ext_resource type="Texture2D" uid="uid://burgp8hwsw3v7" path="res://Assets/2D/whiteTile.png" id="2_afmyk"]

[sub_resource type="LabelSettings" id="LabelSettings_xc88c"]
font_size = 20

[node name="DialogScreen" type="Node2D"]
script = ExtResource("1_1fqaa")

[node name="Option1" type="Sprite2D" parent="."]
modulate = Color(0.807843, 0.807843, 0.807843, 0.313726)
position = Vector2(679.5, 648.5)
scale = Vector2(8.20313, 0.640625)
texture = ExtResource("2_afmyk")

[node name="Option2" type="Sprite2D" parent="."]
modulate = Color(0.807843, 0.807843, 0.807843, 0.313726)
position = Vector2(679.5, 685.5)
scale = Vector2(8.20313, 0.640625)
texture = ExtResource("2_afmyk")

[node name="Main" type="Label" parent="."]
offset_left = 136.0
offset_top = 568.0
offset_right = 1228.0
offset_bottom = 631.0
text = "sasadwadssssssssddddddddddddddddddddddddddddddddddddddddddddddddddddd dddddddddddddddddawdaszxxzc zxczxczdsadwadaszxcczx"
label_settings = SubResource("LabelSettings_xc88c")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Opt1" type="Label" parent="."]
offset_left = 136.0
offset_top = 630.0
offset_right = 1228.0
offset_bottom = 664.0
text = "Option1"
label_settings = SubResource("LabelSettings_xc88c")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Opt2" type="Label" parent="."]
offset_left = 136.0
offset_top = 654.0
offset_right = 1228.0
offset_bottom = 717.0
text = "Option2"
label_settings = SubResource("LabelSettings_xc88c")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true
